feat: add ga tracking

--- a/tiki_mobile_app_prototype_preview.html
+++ b/tiki_mobile_app_prototype_preview.html
@@ -43,6 +43,15 @@
       $axure.utils.getOtherPath = function() { return 'resources/Other.html'; };
       $axure.utils.getReloadPath = function() { return 'resources/reload.html'; };
     </script>
+      <!-- Global site tag (gtag.js) - Google Analytics -->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=UA-139305398-1"></script>
+      <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+
+          gtag('config', 'UA-139305398-1');
+      </script>
   </head>
   <body>
     <div id="base" class="">
