--- a/index.html
+++ b/index.html
@@ -47,6 +47,15 @@
             document.location = "http://cleanuxd.com/tien_ng_-_ux_architect_-_mobile_site.html";
         }
     </script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-139305398-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-139305398-1');
+    </script>
 </head>
 <body>
 <div id="base" class="">
