update mobile pages

--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
     </script>
     <script>
         if ((navigator.userAgent.match(/iPhone/i)) || (navigator.userAgent.match(/iPod/i))) {
-            location.replace("http://cleanuxd.com/tien_ng_-_ux_architect_-_mobile_site.html");
+            location.replace("tien_ng_-_ux_architect_-_homepage_1.html");
         }else if (screen.width <= 768) {
-            document.location = "http://cleanuxd.com/tien_ng_-_ux_architect_-_mobile_site.html";
+            document.location = "tien_ng_-_ux_architect_-_homepage_1.html";
         }
     </script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
