update mobile metadata

--- a/tien_ng_-_ux_architect_-_homepage_1.html
+++ b/tien_ng_-_ux_architect_-_homepage_1.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
     <meta name="apple-mobile-web-app-capable" content="yes"/>
+    <meta name="viewport" content="width = device-width, user-scalable = no">
     <link href="resources/css/jquery-ui-themes.css" type="text/css" rel="stylesheet"/>
     <link href="resources/css/axure_rp_page.css" type="text/css" rel="stylesheet"/>
     <link href="data/styles.css" type="text/css" rel="stylesheet"/>
@@ -317,7 +318,8 @@
 
       <!-- Unnamed (Image) -->
       <div id="u7084" class="ax_default image1">
-        <img id="u7084_img" class="img " src="images/tien_ng_-_ux_architect_-_about_me/u303.png"/>
+        <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="vertical" data-theme="dark" data-vanity="tienuxstrategist"><a class="LI-simple-link" href='https://vn.linkedin.com/in/tienuxstrategist?trk=profile-badge'>Tien Ng.</a></div>
+        <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
       </div>
     </div>
   </body>
